+; rm executable bits on files which don't need it (not sure where those all came from)

--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -195,7 +195,6 @@
 "~^/DNB-FAQsleep.*$" "/dNB-FAQ#sleep";
 "~^/dnb-faq@support.*$" "/dNB-FAQ#support";
 "~^/analysis$" "/dNB-meta-analysis";
-"~^/dnb-meta-analysis.page$" "/dnb-meta-analysis.page";
 "~^/archive$" "/dNM-archives";
 "~^/dnm-archives9.*$" "/dNM-archiveS";
 "~^/pandora$" "/dNM-Archives";
@@ -8843,9 +8842,9 @@
 "~^/doc/genetics/selection/www.mountimprobable.com/SMPY$" "/sMPY";
 "~^/SMPY10$" "/sMPY#fn10";
 "~^/doc/genetics/selection/www.mountimprobable.com/Socks$" "/socks";
-"~^/socks.page$" "/socks.page";
+"~^/Socks.page$" "/socks.page";
 "~^/Sor$" "/sort";
-"~^/soylent.page$" "/soylent.page";
+"~^/Soylent.page$" "/soylent.page";
 "~^/Spaced-repetitionO.*$" "/spaced-repetition";
 "~^/%20spaced%20repetition$" "/spaced-repetition";
 "~^/Spaced-repetitionabstraction.*$" "/spaced-repetition#abstraction";
@@ -9361,12 +9360,9 @@
 "~^/doc/statistics/Charity-is-not-about-helping$" "/charity-is-not-about-helping";
 "~^/br$" "/statoc/404.html";
 "~^/doc/genetics/selection/www.mountimprobable.com/Story-Of-Your-Life$" "/story-Of-Your-Life";
-"~^/story-of-your-life.page$" "/story-of-your-life.page";
 "~^/Story-Of-Your-Life%23timeless-ways-of-thinking$" "/story-Of-Your-Life#timeless-ways-of-thinking";
 "~^/Blackmail/Subscripts$" "/subscripts";
-"~^/subscripts.page$" "/subscripts.page";
 "~^/doc/[a-km-z].*/Sunk-cost.*$" "/sunk-cost";
-"~^/sunk-cost.page$" "/sunk-cost.page";
 "~^/sunkcosts.*$" "/sunk-cost";
 "~^/doc/genetics/selection/www.mountimprobable.com/Suzanne-Delage$" "/suzanne-Delage";
 "~^//Stories.SuzanneDelage$" "/suzanne-delage.page";
@@ -15963,6 +15959,93 @@
 "~^/Sunk$" "/sunk-cost";
 "~^/fCSa$" "/tags/CS";
 "~^/best-anime-movies$" "https://myanimelist.net/animelist/gwern?order=4&order2=-6&status=2";
+"~^/static/font/ssfp/sourceserifpro-basic-regular.ttf$" "/static/font/ssfp/SourceSerifPro-BASIC-Regular.ttf";
+"~^/Nicotine%E2%A0%80.*$" "/nicotine";
+"~^/zeo%2FZma$" "/zeo/zma";
+"~^/Wooden-pillows.html$" "/wooden-pillows";
+"~^/static/img/icon/skull-crossbones-white.svg$" "/static/img/icon/skull-crossbones-solid.svg";
+"~^/static/img/arrow-down-thick.svg$" "/static/img/icon/arrow-down.svg";
+"~^/static/font/dropcap/ninit/dark/C-69-classical.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/ninit/2023-10-23-gwern-midjourneyv5-ninit-darkmode-curatedsamples-c-69-classical.jpg";
+"~^/Slowing-Moore%2527s-Law$" "/slowing-moores-law";
+"~^/.*/Language$" "/language";
+"~^/GOODREADS.*$" "/goodreads";
+"~^/.*/Death-Note-Ending$" "/death-note-ending";
+"~^/doc/technology/20...tenemy\.pdf.*$" "/doc/technology/2005-shirky-agroupisitsownworstenemy.pdf";
+"~^/doc/statistics/order/data.js.html$" "/doc/statistics/order/beanmachine-multistage/data.js.html";
+"~^/doc/statistics/bias/2011-osherovich.pdf,.*$" "/doc/statistics/bias/2011-osherovich.pdf";
+"~^/doc/statistics/1973-meshalkin-collectionofproblemsinprobability$" "/doc/statistics/probability/1973-meshalkin-collectionofproblemsinprobabilitytheory.pdf";
+"~^/doc/sociology/technology/%C2%BF$" "/doc/sociology/technology/index";
+"~^/doc/.*/haskell/Archiving-GitHub$" "/haskell/archiving-github";
+"~^/doc/politics/2009-deugartephyleseconomicdemocracyinthenetworkcentury\.pdf.*$" "/doc/politics/2009-deugarte-phyleseconomicdemocracyinthenetworkcentury.pdf";
+"~^/doc/japan/poetry/%C3.*$" "/doc/japan/poetry/index";
+"~^/doc/iq/1967-guilford-thenatuereofhumanintelligence\.pdf.*$" "/doc/iq/1967-guilford-thenatureofhumanintelligence.pdf";
+"~^/doc/genetics/heritability/index$" "/doc/genetics/heritable/index";
+"~^/doc/Ee.*$" "/doc/index";
+"~^/doc/economics/2009-fried-manseasteadingapracticalguide\.pdf.*$" "/doc/economics/2009-friedman-seasteadingapracticalguide.pdf";
+"~^/doc/cs/algorithm/ai/anime/danbooru/index$" "/doc/ai/anime/danbooru/index";
+"~^/doc/borges/1951-borges-kafkaand$" "/doc/borges/1951-borges-kafkaandhisprecursors.pdf";
+"~^/doc/borges/1947-borgesanewrefutationoftime\.pdf.*$" "/doc/borges/1947-borges-anewrefutationoftime.pdf";
+"~^/doc/bitcoin/2008-nakamoto\(archive.*$" "/doc/bitcoin/2008-nakamoto";
+"~^/doc/ai/nn/transformer/gpt/2020-brow$" "/doc/ai/nn/transformer/gpt/2020-brown-gpt3-figure13-meanperformancescalingcurve.png";
+"~^/doc%2Fmusic%2Ffoxtailgrassstudio-cattleya%FF%FF%FF%FF%FF%FF%FF%FF%FF%FF%FF%FF-%FF%FF%FF-04.jpg$" "/doc/music/foxtailgrassstudio-cattleya幻想写景-妖-04.jpg";
+"~^/doc%2Fanime%2F2009-12-18-%FF%FF%FF%.*-pixiv7701090-greenseevee-encolor.tar$" "/doc/anime/2009-12-18-緑華野菜子-pixiv7701090-greenseevee-encolor.tar";
+"~^/doc/anime/2009-12-18-%FF%FF%FF%.*-pixiv7701090-greenseevee-encolor.tar$" "/doc/anime/2009-12-18-緑華野菜子-pixiv7701090-greenseevee-encolor.tar";
+"~^/doc/2015-january-git-history.png$" "/doc/traffic/2015-gwern-january-git-history.png";
+"~^/Conceptual-graph-comparing-massed-review-and-spaced-repetition-review-effects-on-the-probability-of-remembering-a-fact:-massed-works-better-initially,-but-the-memory-steadily-decays-away,-while-spaced-repetition-restores-it-regularly,-locking-it-in-place$" "/doc/cs/haskell/2013-memotrainerrr.png";
+"~^/Changelog/gwern-ab-testing-text-background-color$" "/ab-testing#text-background-color";
+"~^/CYOA/.*$" "/cyoa";
+"~^/Graveyard$" "/design-graveyard";
+"~^/DNM-arguives$" "/dnm-archives";
+"~^/nback$" "/dnb-faq";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-17-gwern-midjourneyv5-cats-g-dark-1.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/dropcat/2023-10-17-gwern-midjourneyv5-cats-g-dark-1.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-21-gwern-midjourneyv5-cats-dark-mode-hissingkitten-edgeproblems.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/dropcat/2023-10-21-gwern-midjourneyv5-cats-dark-mode-hissingkitten-edgeproblems.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-v-dark-03.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/genewolfe-dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-v-dark-03.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-12-gwern-midjourneyv5-circuit-samples.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/ninit/2023-10-12-gwern-midjourneyv5-circuit-samples.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-12-gwern-midjourneyv5-mechanical-samples-1.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/ninit/2023-10-12-gwern-midjourneyv5-mechanical-samples-1.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-12-gwern-midjourneyv5-portraitcomicstyleroboticexpressionismblackandwhite.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/ninit/2023-10-12-gwern-midjourneyv5-portraitcomicstyleroboticexpressionismblackandwhite.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-23-gwern-midjourneyv5-ninit-c-dark-5.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/ninit/2023-10-23-gwern-midjourneyv5-ninit-c-dark-5.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-23-gwern-midjourneyv5-ninit-c-light-2.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/ninit/2023-10-23-gwern-midjourneyv5-ninit-c-light-2.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-22-gwern-midjourneyv5-landscape-tsuchiyakoitsustyleclutteredoldstudyoverlookingcreek-samples-rectangle.png$" "/doc/ai/nn/diffusion/midjourney/landscape/2023-10-22-gwern-midjourneyv5-landscape-tsuchiyakoitsustyleclutteredoldstudyoverlookingcreek-samples-rectangle.jpg";
+"~^/doc/ai/poetry/2019-12-18-gpt21$" "/doc/ai/poetry/2019-12-16-gpt21.5b-poetry-samples-topp080.txt";
+"~^/doc/anime/danbooru2019-sfw512px-torrent.tar.x$" "/doc/anime/danbooru2019-sfw512px-torrent.tar.xz";
+"~^/doc/anime/eva/2020-crc$" "/doc/anime/eva/2010-crc";
+"~^/doc/darknet-market/2011-07$" "/doc/darknet-market/index";
+"~^/doc/sr/2015-interpolpharmaceuticals\.pdf.*$" "/doc/darknet-markets/2015-interpol-pharmaceuticals.pdf";
+"~^/doc/economics/2009-fried-man-seasteadingapracticalguide\.pdf.*$" "/doc/economics/2009-friedman-seasteadingpracticalguide.pdf";
+"~^/doc/2005-hart\.pdf.*$" "/doc/modafinil/2005-hart.pdf";
+"~^/doc/2013-scoriels\.pdf.*$" "/doc/modafinil/2013-scoriels.pdf";
+"~^/doc/philosophy/e$" "/doc/philosophy/ethics/index";
+"~^/doc/psychology/1971-bloc$" "/doc/psychology/1971-block-masterylearningtheoryandpractice.pdf";
+"~^/doc/psychology/2019-01-20-0$" "/doc/psychology/2019-01-20-gs-socks.csv";
+"~^/doc/psychology/okcupid/raceandat$" "/doc/psychology/okcupid/raceandattraction20092014.html";
+"~^/doc/socio$" "/doc/sociology/index";
+"~^/doc/statistics/1960-nunnally.pd%5Cf$" "/doc/statistics/causality/1960-nunnally.pdf";
+"~^/doc/predictions/-2001-principlesforecasting\.pdf.*$" "/doc/statistics/prediction/2001-armstrong-principlesforecasting.pdf";
+"~^/doc/technology/2018-07-25-%C2%BF$" "/doc/technology/2017-02-05-cms-ahistoryofimdbforums.html";
+"~^/doc/wikipedia/%C3%B0$" "/doc/wikipedia/index";
+"~^/doc/bitcoin/2008-nakamoto\.pdf.*$" "/docs/bitcoin/2008-nakamoto";
+"~^/goodReads$" "/goodreads";
+"~^/index.rss$" "https://gwern.substack.com/feed";
+"~^/Modafanil$" "/modafinil";
+"~^/modadinil$" "/modafinil";
+"~^/%5C$" "/index";
+"~^/note/Parasocial$" "/notes/parasocial";
+"~^/plan$" "/index";
+"~^/prediction-marke$" "/prediction-market";
+"~^/Anime-Reviews$" "/review/anime";
+"~^/Cat-Semse$" "/review/cat";
+"~^/static/hakyll.hs$" "/static/build/hakyll.hs";
+"~^/static/font/dropcap/gene-wolfe/light/T-15.svg$" "/static/font/dropcap/gene-wolfe/light/T-light-15.svg";
+"~^/doc/www/halfsigma.typepad.com/.*/favicon.ico$" "https://halfsigma.typepad.com/favicon.ico";
+"~^/doc/ai/nn/diffusion/.*/favicon.ico$" "/static/img/favicon.ico";
+"~^/.*arxiv\.org*/favicon.ico$" "https://arxiv.org/favicon.ico";
+"~^/hmpor$" "/phmor";
+"~^/The-Three-Grenades$" "/the-three-grenades";
+"~^/The-Melanc$" "/the-melancholy-of-subculture-society";
+"~^/tool$" "/tool-ai";
+"~^/zeo%2FZMA$" "/zeo/zma";
+"~^/doc/2011-modalert100-front-pn.jpg.*$" "/doc/modafinil/2011-modalert100-front-pn.jpg";
+"~^/Statistical_significance.*$" "https://en.wikipedia.org/wiki/Statistical_significance";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~/.*mailto:.*$" "/static/404";
@@ -17732,7 +17815,6 @@
 "~^/doc/personal/gods-heros-myth.com.*$" "/static/404";
 "~^/doc/personal/gogloom.com.*$" "/static/404";
 "~^/doc/personal/goodreads.csv.html.*$" "/static/404";
-"~^/doc/personal/google-cse.xml.html$" "/static/404";
 "~^/doc/personal/gregbear.com.*$" "/static/404";
 "~^/doc/personal/hcomicbook.com$" "/static/404";
 "~^/doc/personal/hdvietnam.com.*$" "/static/404";
@@ -19834,7 +19916,7 @@
 "~^/wp-includes.*$" "/static/404";
 "~^/wp-includes/.*$" "/static/404";
 "~^/wp-info.php.*$" "/static/404";
-"~^/wp-json\/$" "/static/404";
+"~^/wp-json.*$" "/static/404";
 "~^/wp-license.php.*$" "/static/404";
 "~^/wp-links-opml.php.*$" "/static/404";
 "~^/wp-lioad.php.*$" "/static/404";
@@ -21205,7 +21287,6 @@
 "~^/.*axis2-admin/.*$" "/static/404";
 "~^/.*dologin.*$" "/static/404";
 "~^/.*SamlResponse.*$" "/static/404";
-"~^/.*Servlet.*$" "/static/404";
 "~^//oam/.*$" "/static/404";
 "~^/aspera/.*$" "/static/404";
 "~^/endpoint/.*$" "/static/404";
@@ -21217,7 +21298,6 @@
 "~^/amiga-look.*$" "/static/404";
 "~^/Ajax/.*$" "/static/404";
 "~^/[0-9]+.sql$" "/static/404";
-"~^/.*[sS]ervlet.*$" "/static/404";
 "~^/.*/preview.php.*$" "/static/404";
 "~^/.*setHeader.*$" "/static/404";
 "~^/.*%70%65%6e%73%79%6d%70.*$" "/static/404";
