--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -1301,7 +1301,7 @@ default "";
 "~^/LLLT.page" "/lllt.page";
 "~^/Long-Bets.page" "/long-bets.page";
 "~^/Longevity.page" "/longevity.page";
-"~^/lorem.page" "/Lorem.page";
+"~^/Lorem.page" "/lorem.page";
 "~^/LSD-microdosing.page" "/lsd-microdosing.page";
 "~^/Lunar-sleep.page" "/lunar.page";
 "~^/Mail-delivery.page" "/mail-delivery.page";
@@ -11244,3 +11244,4 @@ default "";
 "~^/doc/ai/nn/transformer/gpt/2020-07-19-oceaninthemiddleofanisland-gpt3-chinesepoetrytranslation.png.*$" "/doc/ai/nn/transformer/gpt/3/poetry/2020-07-19-oceaninthemiddleofanisland-gpt3-chinesepoetrytranslation.png";
 "~^/doc/ai/nn/transformer/gpt/2020-nadeem-figure1-gpt2samplingqualityvsdiversity.png.*$" "/doc/ai/nn/transformer/gpt/2/2020-nadeem-figure1-gpt2samplingqualityvsdiversity.png";
 "~^/doc/cs/2001-12-02-treginaldgibbons-isyoursonacomputerhacker.html.*$" "/doc/cs/security/2001-12-02-treginaldgibbons-isyoursonacomputerhacker.html";
+"~^/doc/cs/haskell/2013-memotrainerrr.png.*$" "/2013-memotrainerrr.png";
