--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -930,6 +930,8 @@ server {
         rewrite ^/vitamin-d/(?<original>.*)$ /doc/vitamin-d/$original permanent;
         rewrite ^/wikipedia/(?<original>.*)$ /doc/wikipedia/$original permanent;
         rewrite ^/wiki/(?<original>.*)$ /$original permanent;
+        rewrite ^/(?<original>.*)\~$ /$original permanent;
+        rewrite ^/(?<original>.*)%7E$ /$original permanent;
         rewrite ^/home/gwern/wiki/(?<original>.*)$ /$original permanent;
         rewrite ^/www/(?<original>.*)$ /doc/www/$original permanent;
         rewrite ^/doc/www/nitter.moomoo.me/(?<original>.*)$ /doc/www/nitter.net/$original permanent;
