--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -11245,3 +11245,4 @@ default "";
 "~^/doc/ai/nn/transformer/gpt/2020-nadeem-figure1-gpt2samplingqualityvsdiversity.png.*$" "/doc/ai/nn/transformer/gpt/2/2020-nadeem-figure1-gpt2samplingqualityvsdiversity.png";
 "~^/doc/cs/2001-12-02-treginaldgibbons-isyoursonacomputerhacker.html.*$" "/doc/cs/security/2001-12-02-treginaldgibbons-isyoursonacomputerhacker.html";
 "~^/doc/cs/haskell/2013-memotrainerrr.png.*$" "/2013-memotrainerrr.png";
+"~^/2013-memotrainerrr.png.*$" "/doc/psychology/spaced-repetition/2013-memotrainerrr.png";
