+obituary easter egg (X-Clacks-Overhead HTTP header)

--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -95,6 +95,9 @@ server {
         ## somewhat aggressive caching:
         add_header Cache-Control "max-age=77760000, public, immutable";
 
+        ## RIP: (see </static/nginx/memoriam.sh> for details on generated file)
+        include /etc/nginx/conf.d/memoriam.conf;
+
         ## allow directory browsing, particularly useful for /doc/*
         autoindex on;
 
