+; add clacks test

--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -16046,6 +16046,93 @@
 "~^/zeo%2FZMA$" "/zeo/zma";
 "~^/doc/2011-modalert100-front-pn.jpg.*$" "/doc/modafinil/2011-modalert100-front-pn.jpg";
 "~^/Statistical_significance.*$" "https://en.wikipedia.org/wiki/Statistical_significance";
+"~^/doc/iq/high/smpy/%C3.*$" "/doc/iq/high/smpy/index";
+"~^/doc/psychology/2019-letexier.pdf%5C%5C.*$" "/doc/psychology/2019-letexier.pdf";
+"~^/fiction/Batman\?.*$" "/fiction/batman";
+"~^/.*/DNM-arrests$" "/dnm-arrests";
+"~^/doc/anime/eva/1997-animeland-may-hideakianno-interview$" "/doc/anime/eva/1997-animeland-may-hideakianno-interview.pdf";
+"~^/static/js/-poster.jpg$" "/static/js/index";
+"~^/static/js/MathMLinHTML.js$" "https://darcs.net/js/MathMLinHTML.js";
+"~^/Safecracker$" "/fiction/safecracker";
+"~^/portability.html/$" "/doc/biology/2000-iapac-norvir/index.html";
+"~^/policyidx.html$" "/doc/biology/2000-iapac-norvir/index.html";
+"~^/Nootropics/mikebeauchamp.*$" "/nootropics/nootropic";
+"~^/.*/Epigrams$" "/epigrams";
+"~^/.*/docs/eva/1996-newtype-anno-interview$" "/docs/eva/1996-newtype-anno-interview";
+"~^/kslotz.*$" "/static/404";
+"~^/education.html$" "/doc/biology/2000-iapac-norvir/index.html";
+"~^/doc/statistics/order/style.css.html$" "/doc/statistics/order/beanmachine-multistage/style.css.html";
+"~^/doc/statistics/order/comparison/2002-pelc$" "/doc/statistics/order/comparison/2002-pelc.pdf";
+"~^/doc/statistics/1975-rosenthal-experimenterexpectancyeffects\.pdf.*$" "/doc/statistics/bias/1976-rosenthal-experimenterexpectancyeffects.pdf";
+"~^/doc/rotten..*takeda-notenkimemoirs$" "/doc/anime/eva/2002-takeda-notenkimemoirs";
+"~^/.*/Drug-heuristics$" "/drug-heuristics";
+"~^/doc/rotten.com/library/bio/crime/criminals/aryan-republican-army/index$" "/doc/rotten.com/library/bio/crime/criminals/aryan-republican-army/index.html";
+"~^/doc/p.*/sociology/1987-rossi$" "/doc/sociology/1987-rossi";
+"~^/doc/iq/github-markdown-css$" "https://github.com/sindresorhus/github-markdown-css";
+"~^/doc/iq/2007-usnationalintelligencesurvey-.*$" "/doc/iq/index";
+"~^/doc/history/1970-bush-piecesofthraction\.pdf.*$" "/doc/history/1970-bush-piecesoftheaction.pdf";
+"~^/doc/economics/advertising/%C3%83%C2%B0$" "/doc/economics/advertising/index";
+"~^/doc/economics/advertising/2019-06-10-%C2%BF$" "/doc/economics/advertising/index";
+"~^/doc/darknet-market/nT.*$" "/doc/darknet-market/index";
+"~^/.*/DNM-survival$" "/dnm-survival";
+"~^/doc/darknet-market/deepstatus.png$" "/doc/darknet-market/index";
+"~^/doc/cs/algorithm/ai/nn/transformer/index$" "/ai/nn/transformer/index";
+"~^/doc/cat/earwax/index$" "/doc/cat/psychology/earwax/index";
+"~^/doc/biology/2000-iapac-norvir/education.html$" "/doc/biology/2000-iapac-norvir/index.html";
+"~^/doc/biology/2000-iapac-norvir/description$" "/doc/biology/2000-iapac-norvir/description.html";
+"~^/doc/anime/eva/MT.*$" "/doc/anime/eva/";
+"~^/description.html/$" "/doc/biology/2000-iapac-norvir/description.html";
+"~^//css/index.php$" "/doc/css/index";
+"~^/Creatine\?.*$" "/creatine";
+"~^/creatiesiteweb.*$" "/static/404";
+"~^/Copyright\?.*" "/copyright";
+"~^/committee.html/$" "/doc/biology/2000-iapac-norvir/committee.html";
+"~^/aboutidx.html$" "/about";
+"~^/complement2$" "/complement";
+"~^/KY,*$" "/index";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-16-gwern-midjourneyv5-christmas-glogo-dark-1.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-16-gwern-midjourneyv5-christmas-glogo-dark-1.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-17-gwern-midjourneyv5-cats-g-light-5.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/dropcat/2023-10-17-gwern-midjourneyv5-cats-g-light-5.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-v-dark-09.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/genewolfe-dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-v-dark-03.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-v-light-23.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/genewolfe-dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-v-light-23.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-11-01-gwern-midjourneyv5-genewolfe-genewolfemoustaches.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/genewolfe-dropcap/2023-11-01-gwern-midjourneyv5-genewolfe-genewolfemoustaches.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-21-gwern-midjourneyv5-dropcap-uppercaset-failuresamples.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/ninit/2023-10-21-gwern-midjourneyv5-dropcap-uppercaset-failuresamples.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-23-gwern-midjourneyv5-ninit-c-light-6.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/ninit/2023-10-23-gwern-midjourneyv5-ninit-c-light-2.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-20-gwern-midjourneyv5-snowymountainpasswithdogtracksleadingintothedistance-square-1.png$" "/doc/ai/nn/diffusion/midjourney/landscape/2023-10-20-gwern-midjourneyv5-snowymountainpasswithdogtracksleadingintothedistance-square-1.jpg";
+"~^/doc/ai/nn/diffusion/midjourney/2023-10-20-gwern-midjourneyv5-woodblockprintofcaliforniamountingpassinwinter.png$" "/doc/ai/nn/diffusion/midjourney/landscape/2023-10-20-gwern-midjourneyv5-woodblockprintofcaliforniamountingpassinwinter.jpg";
+"~^/doc/ai/nn/transformer/gpt/2021-07-19-oceaninthemiddleofanisland-gpt3-chinesepoetrytranslation.png$" "/doc/ai/nn/transformer/gpt/3/poetry/2020-07-19-oceaninthemiddleofanisland-gpt3-chinesepoetrytranslation.png";
+"~^/doc/ai/nn/transformer/gpt/i$" "/doc/ai/nn/transformer/gpt/index";
+"~^/committee.html$" "/doc/biology/2000-iapac-norvir/committee.html";
+"~^/description.html$" "/doc/biology/2000-iapac-norvir/description.html";
+"~^/portability.html$" "/doc/biology/2000-iapac-norvir/portability.html";
+"~^/search.html$" "/doc/biology/2000-iapac-norvir/search.html";
+"~^/whatsnew.html$" "/doc/biology/2000-iapac-norvir/whatsnew.html";
+"~^/doc/sr/2003-pickard-lsd-trial-transcript1\.pdf.*$" "/doc/darknet-markets/pickard/index.html";
+"~^/doc/economics/advertising/2019-03-23-0$" "/doc/economics/advertising/index";
+"~^/doc/genetics/1991-helbig\.pdf.*$" "/doc/genetics/selection/artificial/1991-helbig.pdf";
+"~^/doc/2017-wei\.pdf.*$" "/doc/longevity/fasting/2017-wei.pdf";
+"~^/doc/personal/yourmorals.org/disgust_process.html$" "/doc/personal/2011-gwern-yourmorals.org/disgust_process.html";
+"~^/doc/paychology$" "/doc/psychology/index";
+"~^/doc/psychology/okcupid/app$" "/doc/psychology/okcupid/index";
+"~^/doc/so$" "/doc/sociology/index";
+"~^/.../library/bio/crime/criminals/veerappan/index.html$" "/doc/rotten.com/library/bio/crime/criminals/veerappan/index.html";
+"~^/doc/rotten.com/library/bio/entertainers/music/trent-reznor/index.html$" "https://en.wikipedia.org/wiki/Trent_Reznor";
+"~^/GPT-2-musicI$" "/gpt-2-music";
+"~^/GPT-3K$" "/gpt-3";
+"~^/GZtG$" "/gpt-3";
+"~^/Hydro-cephalus$" "/hydrocephalus";
+"~^/contact.html$" "/me#contact";
+"~^/iletisim$" "/miletians";
+"~^/NicotineG$" "/nicotine";
+"~^/phmor$" "/phmor";
+"~^/review/mea$" "/review/mead";
+"~^/static/font/index$" "https://github.com/gwern/gwern.net/tree/master/font";
+"~^/doc/nicotine/favicon.ico$" "/static/img/favicon.ico";
+"~^/doc/cs/algorithm/information/compression/favicon.ico$" "/static/img/favicon.ico";
+"~^/SunkCosts$" "/sunk-cost";
+"~^/Terrorism-is-not-about-Terror/n$" "/terrorism-is-not-about-terror";
+"~^/the-three-grenades$" "/the-three-grenades";
+"~^/turing-complete/$" "/turing-complete";
+"~^/doc/psychology/2016-levitt$" "/doc/psychology/cognitive-bias/2020-levitt.pdf";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~/.*mailto:.*$" "/static/404";
