all: migrate Markdown format file extension '.page' → '.md': shorter & more compatible

--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -53,7 +53,7 @@ server {
         include  /etc/nginx/mime.types;
         ## support non-basic MIME types...
         types {
-          text/markdown page;
+          text/markdown md;
           application/x-maff maff;
           text/plain conf;
           text/csv csv;
@@ -385,7 +385,7 @@ server {
         rewrite ^/\%26amp\;.*quot\;.*/(?<original>.*) /$original permanent;
         rewrite ^/(?<original>.*)\&quot$ /$original permanent;
         rewrite ^/(?<original>.*)\&[a-z][a-z]=.*$ /$original permanent;
-        rewrite ^/(?<original>.*)\.pag$ /$original.page permanent;
+        rewrite ^/(?<original>.*)\.pag$ /$original.md permanent;
         rewrite ^/\.\/doc/(?<original>.*) /$original permanent;
         rewrite ^/(?<original>.*)\=$ /$original permanent;
         # rewrite ^/(?<original>.*)\%[0-9]C.*$ /$original permanent;
@@ -417,11 +417,11 @@ server {
         rewrite ^/index/(?<original>.*)$ /$original permanent;
         rewrite ^/(?<original>.*)\~$ /$original permanent;
         rewrite ^/(?<original>.*)\:$ /$original permanent;
-        rewrite ^/(?<original>.*),page$ /$original.page permanent;
-        rewrite ^/(?<original>.*)\.md$ /$original.page permanent;
-        rewrite ^/(?<original>.*)\.markdown$ /$original.page permanent;
-        rewrite ^/(?<original>.*)\.source$ /$original.page permanent;
-        rewrite ^/(?<original>.*)\<br\>$ $original.page permanent;
+        rewrite ^/(?<original>.*),page$ /$original.md permanent;
+        rewrite ^/(?<original>.*)\.md$ /$original.md permanent;
+        rewrite ^/(?<original>.*)\.markdown$ /$original.md permanent;
+        rewrite ^/(?<original>.*)\.source$ /$original.md permanent;
+        rewrite ^/(?<original>.*)\<br\>$ $original.md permanent;
         rewrite ^/-(?<original>.*)$ /$original permanent;
         rewrite ^/(?<original>.*)\.tmp$ /$original permanent;
         rewrite ^/(?<original>.*)\.pd\/f$ /$original.pdf permanent;
@@ -673,20 +673,21 @@ server {
         rewrite ^/(?<original>.*)\&amp\;.*$ /$original permanent;
         rewrite ^/(?<original>doc/.*/.*\.pdf)-.*$ /$original permanent; # deal with all the erroneous PDF links like '/doc/iq/2018-warne.pdf-en-espanol'
         rewrite ^/(?<original>doc/.*/.*\.pdf)[A-Z][a-z]+$ /$original permanent; # '/doc/psychology/writing/1993-ericsson.pdfEriksson'
-        rewrite ^/(?<original>.page)/.*$ /$original permanent; # '/foo.page/', surprisingly common
+        rewrite ^/(?<original>\.page)/.*$ /$original permanent; # '/foo.page/', surprisingly common
+        rewrite ^/(?<original>\.md)/.*$ /$original permanent;
         rewrite ^/(?<original>.*)\&tbnid.*$ /$original permanent;
         rewrite ^/(?<original>.*)\]$ /$original permanent;
         rewrite ^/(?<original>.*)\[$ /$original permanent;
         rewrite ^/\.\/(?<original>.*) /$original permanent;
-        rewrite ^/(?<original>.*).PAGE$ /$original.page permanent;
+        rewrite ^/(?<original>.*).PAGE$ /$original.md permanent;
         rewrite ^/(?<original>.*)\’ /$original permanent;
         rewrite ^/(?<original>.*)\&title.*$ /$original permanent;
-        rewrite ^/(?<original>.*).pagee$ /$original.page permanent;
+        rewrite ^/(?<original>.*).pagee$ /$original.md permanent;
         rewrite ^/(?<original>.*/)url$ /$original permanent;
         rewrite ^/(?<original>doc/.*\.pdf)/.*$ /$original permanent;
         rewrite ^/(?<original>tags/.*).page.*$ /$original permanent;
-        rewrite ^/(?<original>.*).pages$ /$original.page permanent;
-        rewrite ^/(?<original>.*).Page$ /$original.page permanent;
+        rewrite ^/(?<original>.*).pages$ /$original.md permanent;
+        rewrite ^/(?<original>.*).Page$ /$original.md permanent;
         rewrite ^/(?<original>.*)adminer\..*$ /$original permanent;
         rewrite ^/(?<original>doc/.*\.pd)\/(?<ext>f).*$ /$original$ext permanent;
         rewrite ^/(?<original>doc/.*\.pd)%5c(?<ext>f).*$ /$original$ext permanent;
@@ -821,8 +822,8 @@ server {
         rewrite ^/newslettter/(?<old>.*)$ /newsletter/$old permanent;
         rewrite ^/newsleter/(?<old>.*)$ /newsletter/$old permanent;
         rewrite ^/(?<old>.*)`(?<old2>.*)$ /$old$old2 permanent;
-        rewrite ^/(?<old>.*)\.page/index\.html$ /$old.page permanent;
-        rewrite ^/(?<old>.*)\.page/$ /$old.page permanent;
+        rewrite ^/(?<old>.*)\.page/index\.html$ /$old.md permanent;
+        rewrite ^/(?<old>.*)\.page/$ /$old.md permanent;
         rewrite ^/(?<old>.*)/N/A$ /$old permanent;
         rewrite ^/(?<first>.*)‐(?<second>.*)$ /$first-$second permanent; # convert HYPHEN (which is bad!) to what everyone thinks HYPHEN is, HYPHEN-MINUS
         rewrite ^/(?<first>.*)\+(?<second>.*)$ /$first-$second permanent;
@@ -976,6 +977,9 @@ server {
 
         rewrite ^/metadata/annotations/doc/(?<original>[0-9a-zA-Z].*) /metadata/annotation/%2Fdoc/$original permanent;
         rewrite ^/metadata/annotations/(?<original>[0-9a-ce-gi-z].*) /metadata/annotation/%2F$original permanent;
+
+        # Gitit dot-page → Markdown .md migration:
+        rewrite /(?<original>.*)\.page$ /$original.md permanent;
 
         ## it's very hard to fix broken '#' anchors since it's client-side, the web server isn't support to see it
         ## and I couldn't find any Nginx solution I understood, so we just strip the trailing garbage:
