migrate YAML -> GTX

--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -85,7 +85,9 @@ server {
           text/yaml yaml;
           audio/wav wav;
           video/mp4 mkv;
-          application/font-sfnt otf; }
+          application/font-sfnt otf;
+          text/x-gtx gtx; # Gwern.net custom format
+          }
 
         # force text files into UTF-8 to avoid 'mojibake':
         charset utf-8;
