--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -8576,10 +8576,10 @@
 # "~^/metadata/annotations/https://www.thisfursonadoesnotexist.com.html$" "/metadata/annotations/https%3A%2F%2Fwww.thisfursonadoesnotexist.com.html";
 "~^/archive.hs.*$" "/metadata/archive.hs";
 "~^/archive.hs.html.*$" "/metadata/archive.hs.html";
-"~^/auto.yaml.*$" "/metadata/auto.yaml";
-"~^/static/metadata/auto.hs$" "~^/metadata/auto.yaml";
+"~^/auto.yaml.*$" "/metadata/auto.gtx";
+"~^/static/metadata/auto.hs$" "~^/metadata/auto.gtx";
 "~^/backlinks.hs.*$" "/metadata/backlinks.hs";
-"~^/custom.yaml$" "/metadata/full.yaml";
+"~^/custom.yaml$" "/metadata/full.gtx";
 "~^/links.page.*$" "/me.md";
 "~^/doc/[a-km-z]/Milk.*$" "/milk";
 "~^/doc/fiction/Missing-Cities$" "/missing-Cities";
@@ -10938,7 +10938,7 @@
 "~^/doc/Treadmill$" "/treadmill";
 "~^/turing-compl$" "/turing-complete";
 "~^/doc/genetics/2005-liao\.pdf.*$" "/doc/genetics/selection/2005-liao.pdf";
-"~^/static/metadata/custom.hs$" "/metadata/custom.yaml";
+"~^/static/metadata/custom.hs$" "/metadata/custom.gtx";
 "~^/static/build/markdown.elc.*$" "/static/build/markdown.el";
 "~^/doc/biology/images/nav_search.gif.*$" "/static/404.html";
 "~^/doc/biology/compnews/urgnorvirnr.html.*$" "/doc/biology/2000-iapac-norvir/urgnorvirnr.html";
@@ -12476,7 +12476,7 @@
 "~^/Haskell$" "/haskell/index";
 "~^/popin.html$" "/static/js/popups.js";
 "~^/index\[.*$" "/index";
-"~^/static/metadata/.*/metadata/auto.yaml$" "/metadata/auto.yaml";
+"~^/static/metadata/.*/metadata/auto.yaml$" "/metadata/auto.gtx";
 "~^/[Mm]agnesium$" "/nootropics/Magnesium";
 "~^/note/Attention$" "/note/attention";
 "~^/resilient-Haskell-Software$" "/resilient-haskell-software";
@@ -16133,6 +16133,15 @@
 "~^/the-three-grenades$" "/the-three-grenades";
 "~^/turing-complete/$" "/turing-complete";
 "~^/doc/psychology/2016-levitt$" "/doc/psychology/cognitive-bias/2020-levitt.pdf";
+"~^/doc/spa....cedrepetition/2019-r$" "/doc/psychology/spaced-repetition/2019-rohrer.pdf";
+"~^/static/img/about.php$" "/static/img/index";
+"~^/papers$" "/doc/index";
+"~^/doc/ai/poetry/2019-05-24-1$" "/doc/ai/poetry/2019-05-24-gpt2-poetry-yeatssecondcoming-500completions.txt";
+"~^/doc/2006-nasr\.pdf.*$" "/doc/modafinil/2006-nasr.pdf";
+"~^/doc/2008-kueber\.pdf.*$" "/doc/modafinil/2008-kueber.pdf";
+"~^/doc/psychology/okcupid/howyourraceaffectsthemessagesyo$" "/doc/psychology/okcupid/howyourraceaffectsthemessagesyouget.html";
+"~^/Littl$" "/littlewood";
+"~^/doc/E9.*$" "/doc/index";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~/.*mailto:.*$" "/static/404";
@@ -21982,6 +21991,10 @@
 "~^/.*/index\.asp.*$" "/static/404";
 "~^/.*/Urban/min/.*$" "/static/404";
 "~^/[vV]agrant.*$" "/static/404";
+"~^/sedlacek.*$" "/static/404";
+"~^/.*RxR\.php.*$" "/static/404";
+"~^/.*/Jarnet.com.*$" "/static/404";
+"~^/.*bestlesbian.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
