--- a/redirect/nginx.conf
+++ b/redirect/nginx.conf
@@ -17,8 +17,8 @@ default "";
 "~^/markdown-lint.sh$" "/static/build/markdown-lint.sh";
 "~^/sync-gwern.net.sh$" "/static/build/sync-gwern.net.sh";
 "~^/static/metadata/archive.hs$" "/metadata/archive.hs";
-"~^/static/metadata/auto.yaml$" "/metadata/auto.yaml";
-"~^/static/metadata/custom.yaml$" "/metadata/full.yaml";
+"~^/static/metadata/auto.yaml$" "/metadata/auto.gtx";
+"~^/static/metadata/custom.yaml$" "/metadata/full.gtx";
 "~^/images/logo/logo-smooth.svg$" "/static/img/logo/logo-smooth.svg";
 "~^/images/logo/logo-smooth-appletouch.png$" "/static/img/logo/logo-smooth-appletouch.png";
 "~^/images/logo-christmas.jpg$" "/static/img/logo/logo-christmas.jpg";
@@ -4451,7 +4451,7 @@ default "";
 "~^/doc/genetics/heritable/correlation/2020-zhou.pdf.*$" "/doc/genetics/heritable/correlation/mendelian-randomization/2020-zhou.pdf";
 "~^/doc/genetics/heritable/correlation/2021-daghlas.pdf.*$" "/doc/genetics/heritable/correlation/mendelian-randomization/2021-daghlas.pdf";
 "~^/doc/genetics/heritable/2021-yengo.pdf.*$" "/doc/genetics/heritable/rare-variants/2021-yengo.pdf";
-"~^/metadata/partial.yaml$" "/metadata/half.yaml";
+"~^/metadata/partial.yaml$" "/metadata/half.gtx";
 "~^/doc/psychology/2022-crampton.pdf.*$" "/doc/psychology/animal/bird/2022-crampton.pdf";
 "~^/doc/psychology/neuroscience/2022-sol.pdf.*$" "/doc/psychology/animal/bird/neuroscience/2022-sol.pdf";
 "~^/doc/psychology/neuroscience/2015-swift.pdf.*$" "/doc/psychology/animal/bird/2015-swift.pdf";
@@ -4461,7 +4461,7 @@ default "";
 "~^/doc/psychology/neuroscience/2020-stacho.pdf.*$" "/doc/psychology/animal/bird/neuroscience/2020-stacho.pdf";
 "~^/doc/psychology/2017-hammers.pdf.*$" "/doc/psychology/animal/bird/2017-hammers.pdf";
 "~^/doc/ai/1988-lang.pdf.*$" "/doc/ai/nn/fully-connected/1988-lang.pdf";
-"~^/metadata/custom.yaml.*$" "/metadata/full.yaml";
+"~^/metadata/custom.yaml.*$" "/metadata/full.gtx";
 "~^/notes/Problem-14.*" "/Problem-14";
 "~^/doc/iq/2022-woodley.pdf.*$" "/doc/iq/animal/2022-woodley.pdf";
 "~^/doc/iq/2019-horschler.pdf.*$" "/doc/iq/animal/2019-horschler.pdf";
@@ -11247,3 +11247,4 @@ default "";
 "~^/doc/cs/haskell/2013-memotrainerrr.png.*$" "/2013-memotrainerrr.png";
 "~^/2013-memotrainerrr.png.*$" "/doc/psychology/spaced-repetition/2013-memotrainerrr.png";
 "~^/doc/statistics/survival-analysis/2013-gajendragadkar-figure1-survivalcurveofchocolateinhospitaloverminutes.jpg.*$" "/doc/statistics/survival-analysis/2013-gajendragadkar-figure1-survivalcurveofchocolateinhospitaloverminutes.png";
+"~^/doc/politics/2010-anderson.pdf.*$" "/doc/politics/2010-anderson-2.pdf";
