fix misc bugs related to GTX

--- a/nginx/gwern.net.conf
+++ b/nginx/gwern.net.conf
@@ -82,7 +82,6 @@ server {
           application/font-sfnt ttf;
           image/x-xcf xcf;
           application/x-xz xz;
-          text/yaml yaml;
           audio/wav wav;
           video/mp4 mkv;
           application/font-sfnt otf;
@@ -92,7 +91,7 @@ server {
         # force text files into UTF-8 to avoid 'mojibake':
         charset utf-8;
         source_charset utf-8;
-        charset_types htm text/css text/csv text/markdown text/plain text/x-diff text/x-haskell text/x-opml text/x-patch text/x-php text/x-r text/x-shellscript text/yaml;
+        charset_types htm text/css text/csv text/markdown text/plain text/x-diff text/x-haskell text/x-opml text/x-patch text/x-php text/x-r text/x-shellscript text/x-gtx;
 
         ## somewhat aggressive caching:
         add_header Cache-Control "max-age=77760000, public, immutable";
@@ -420,7 +419,6 @@ server {
         rewrite ^/(?<original>.*)\~$ /$original permanent;
         rewrite ^/(?<original>.*)\:$ /$original permanent;
         rewrite ^/(?<original>.*),page$ /$original.md permanent;
-        rewrite ^/(?<original>.*)\.md$ /$original.md permanent;
         rewrite ^/(?<original>.*)\.markdown$ /$original.md permanent;
         rewrite ^/(?<original>.*)\.source$ /$original.md permanent;
         rewrite ^/(?<original>.*)\<br\>$ $original.md permanent;
