--- a/redirect/nginx-broken.conf
+++ b/redirect/nginx-broken.conf
@@ -16142,6 +16142,24 @@
 "~^/doc/psychology/okcupid/howyourraceaffectsthemessagesyo$" "/doc/psychology/okcupid/howyourraceaffectsthemessagesyouget.html";
 "~^/Littl$" "/littlewood";
 "~^/doc/E9.*$" "/doc/index";
+"~^/doc/touhou/2013-06-08-acircle-tohoarrangeb$" "/doc/touhou/2013-06-08-acircle-tohoarrange.csv";
+"~^/doc/music/music-distraction/2009-kantner$" "/doc/music/music-distraction/2009-kantner.pdf";
+"~^/Nootropics/comments/f40may/whenever_i_eat_45_cloves_of_garlic_i_feel_amazing/$" "https://www.reddit.com/Nootropics/comments/f40may/whenever_i_eat_45_cloves_of_garlic_i_feel_amazing/";
+"~^/media.wired.com/photos/60ae8d9b8fb37ccc1b53b686/master/w_1600,c_limit/Bowling-3Q4A0980.jpg$" "https://media.wired.com/photos/60ae8d9b8fb37ccc1b53b686/master/w_1600,c_limit/Bowling-3Q4A0980.jpg";
+"~^/doc/sociology/%EF.*$" "/doc/sociology/index";
+"~^/Colder-wars$" "/colder-wars";
+"~^/doc/ai/nn/diffusion/midjourney/dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-v-light-12.png$" "/doc/ai/nn/diffusion/midjourney/dropcap/genewolfe-dropcap/2023-10-31-gwern-midjourneyv5-genewolfe-v-light-12.jpg";
+"~^/doc/crime/terrorism/2019-king\.pdf.*$" "/doc/iq/2019-king.pdf";
+"~^/doc/history/1979-vogel-japanasnumberone$" "/doc/japan/history/1979-vogel-japanasnumberone.pdf";
+"~^/doc/2011-gwern-yourmorals.org/schwartz_process.php_files/surveyresults_graph_libcon.png$" "/doc/personal/2011-gwern-yourmorals.org/epbs2_process.php_files/surveyresults_graph_libcon.png";
+"~^/doc/psychology/2020-10-198$" "/doc/psychology/2020-10-26-dyqz-rdataisbeautiful-iasked16kpeoplehowmanyholescertainobjectshave.html";
+"~^/note/Cultural-Revolution$" "/review/cultural-revolution";
+"~^/static/font/dropcap/dropcat/dark/Q-6.svg$" "/static/font/dropcap/dropcat/dark/Q-dark-6.svg";
+"~^/static/font/dropcap/gene-wolfe/light/T-09.svg$" "/static/font/dropcap/gene-wolfe/light/T-light-09.svg";
+"~^/doc/philosophy/epistemology/favicon.ico$" "/static/img/favicon.ico";
+"~^/supplements$" "/nootropic/nootropic";
+"~^/semicon.yju.ac.kr/index.php%3Fmid=board_OyMr26&document_srl=5403.*$" "https://semicon.yju.ac.kr/index.php%3Fmid=board_OyMr26&document_srl=5403";
+"~^/saebomdent.co.kr/bbs/board.php%3Fbo_table=free&wr_id=160611.*$" "https://saebomdent.co.kr/bbs/board.php%3Fbo_table=free&wr_id=160611";
 
 ## general blacklist due to broken crawlers (explicitly redirect to remove nginx error logs):
 "~/.*mailto:.*$" "/static/404";
@@ -20612,7 +20630,7 @@
 "~^/.*0\+0\+0\+1.*$" "/static/404.html";
 "~^/.*-AND-2\*3\*8\=.*$" "/static/404.html";
 "~^/vpns/.*$" "/static/404.html";
-"~^/doc/www/gsa-online.de.*$" "/static/404.html";
+"~^/.*gsa-online\..*$" "/static/404.html";
 "~^/zhzh.info.*$" "/static/404.html";
 "~^/showinfo/.*$" "/static/404.html";
 "~^/.*/im.php.*$" "/static/404.html";
@@ -21995,6 +22013,7 @@
 "~^/.*RxR\.php.*$" "/static/404";
 "~^/.*/Jarnet.com.*$" "/static/404";
 "~^/.*bestlesbian.*$" "/static/404";
+"~^/db_backup.*$" "/static/404";
 
 # removed feature:
 "~^/static/previews/.*\.png$" "/static/404";
